fixes slot track release icons overlapping name

--- a/app/assets/volume/slot.styl
+++ b/app/assets/volume/slot.styl
@@ -218,12 +218,9 @@ input[type='text'].slot-timeline-time, .slot-timeline-control > button
   display inline-block
   overflow hidden
   text-overflow ellipsis
-  width 96%
+  width 95%
   padding-left b2
-  @media screen and (max-width:grid-tablet-width)
-    width 90%
-  @media screen and (max-width:grid-mobile-width)
-    width 80%
+  padding-right b1+b3
   .track-status
     color red
   &.uploading
